--- a/Dockerfile.env
+++ b/Dockerfile.env
@@ -9,6 +9,6 @@ COPY --from=build-env /opt/app /opt/app
 WORKDIR /opt/app
 EXPOSE 8080
 
-DOTENV # look at go-dotenv-dockerfile how it's rendered
+DOTENV # check at https://github.com/kivio/go-dotenv-dockerfile
 
 CMD ["app.js"]
