Update to use latest

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,4 +22,4 @@ jobs:
         # Docker Image name
         image-name: dotenv2dockerfile
         # Docker Image tag
-        extract-git-tag: true
+        image-tag: latest
