--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,10 +31,17 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v .
+      run: go build -v . -o dotenv2dockerfile
 
     - name: Test
       run: go test -v .
     
-    - name: GitHub Releases
-      uses: fnkr/github-action-ghr@v1.3
+    - name: Automatic Releases
+      uses: marvinpinto/action-automatic-releases@v1.0.0
+      with:
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        automatic_release_tag: latest
+        prerelease: false
+        title: "New application Version"
+        files: |
+          dotenv2dockerfile
