--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,18 +23,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
+      run: go get -d -v ./...
+        
     - name: Build
-      run: go build -v . -o dotenv2dockerfile
-
-    - name: Test
-      run: go test -v .
+      run: go build -o dotenv2dockerfile
     
     - name: Automatic Releases
       uses: marvinpinto/action-automatic-releases@v1.0.0
